added icon folder

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,6 +1,8 @@
 @import './abstract/Index.scss';
 @import './base/Index.scss';
 
-body {
-  background: blue;
+.icon {
+  width: 90px;
+  height: 90px;
+  padding: 10px;
 }
