--- a/src/assets/styles/abstract/Colors.scss
+++ b/src/assets/styles/abstract/Colors.scss
@@ -1,6 +1,8 @@
 :root {
   --primary-color: #7908ff;
   --secondary-color: #f4ecfe;
-  --background-color: #e5e5e5;
+  --background-color: #fdfcff;
   --gray-medium: #a5a7af;
+  --white: white;
+  --black: #373744;
 }
