--- a/src/assets/styles/base/Typography.scss
+++ b/src/assets/styles/base/Typography.scss
@@ -13,6 +13,7 @@ body {
   line-height: inherit;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  color: var(--black);
 }
 
 input,
@@ -23,4 +24,10 @@ textarea {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.link {
+  color: var(--primary-color);
+  font-size: rem(14);
+  line-height: rem(20);
 }
