--- a/src/assets/styles/abstract/Typography.scss
+++ b/src/assets/styles/abstract/Typography.scss
@@ -2,5 +2,6 @@
   --system-fonts: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   --font: 'Lato', sans-serif;
+  --f-medium: 500;
   --f-bold: 700;
 }
