--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,11 +1,18 @@
 @import '../../assets/styles/abstract/Functions.scss';
+@import '../../assets/styles/abstract/Breakpoints.scss';
+@import '../../assets/styles/abstract/Mixins.scss';
 
 .header {
   padding: rem(24) rem(32) rem(14) rem(32);
   background-color: var(--white);
-  width: calc(100% - 280px);
-  float: right;
+  width: 100%;
+  float: none;
   border-bottom: 1px solid #d8d9e2;
+
+  @include breakpoint(md) {
+    width: calc(100% - 280px);
+    float: right;
+  }
 
   &-top {
     margin-bottom: rem(35);
@@ -33,4 +40,43 @@
   font-size: rem(16);
   line-height: rem(19);
   font-weight: var(--f-medium);
+}
+
+.notification {
+  &-dot {
+    top: rem(-3);
+    right: rem(-4);
+    background-color: #e81f37;
+    font-size: rem(12);
+    line-height: rem(14);
+    color: white;
+    border-radius: 100%;
+    width: rem(18);
+    height: rem(18);
+  }
+}
+
+.header-help {
+  margin-left: rem(24);
+}
+
+.menu-toggle {
+  width: 24px;
+  height: 24px;
+  padding: 5px 2px;
+  margin-right: rem(16);
+
+  &_line {
+    width: 100%;
+    height: rem(2);
+    padding-right: 0;
+    padding-bottom: 0;
+    border-radius: rem(20);
+    background-color: var(--black);
+
+    &:nth-child(2) {
+      margin-top: rem(4);
+      margin-bottom: rem(4);
+    }
+  }
 }
