--- a/src/assets/styles/abstract/Colors.scss
+++ b/src/assets/styles/abstract/Colors.scss
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #7908ff;
+  --primary-color-darker: #6c07e4;
   --secondary-color: #f4ecfe;
   --background-color: #fdfcff;
   --gray-medium: #a5a7af;
