--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -34,6 +34,14 @@
       margin-right: rem(8);
     }
   }
+
+  &-buttons {
+    .btn {
+      &:last-child {
+        margin-left: rem(12);
+      }
+    }
+  }
 }
 
 .section-name {
