--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,47 +1,36 @@
-.button {
-  display: inline-flex;
-  padding: 0 1rem;
-  line-height: 2rem;
-  font-weight: 100;
-  text-align: center;
-  border-radius: 3px;
+@import '../../assets/styles/abstract/Functions.scss';
 
-  transition: 0.2s all;
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: rem(50);
+  transition: all 0.225s ease;
+  font-weight: var(--f-medium);
 
-  color: var(--colorPrimary);
-  border: 1px solid var(--colorPrimary);
-  background: color(var(--colorNeutralLight) a(0.2));
+  &--primary {
+    background-color: var(--primary-color);
+    color: var(--white);
 
-  &:hover {
-    text-decoration: none;
-    color: var(--colorPrimaryDark);
-    border: 1px solid var(--colorPrimaryDark);
+    &:hover {
+      background-color: var(--primary-color-darker);
+    }
   }
-}
 
-.secondary {
-  color: var(--colorSecondary);
-  border: 1px solid var(--colorSecondary);
+  &--secondary {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
 
-  &:hover {
-    color: var(--colorSecondaryDark);
-    border: 1px solid var(--colorSecondaryDark);
+    &:hover {
+      background-color: #e9dcfa;
+    }
   }
-}
 
-.light {
-  color: var(--colorNeutralLight);
-  border: 1px solid var(--colorNeutralLight);
-
-  &:hover {
-    color: var(--colorNeutralLight);
-    border: 1px solid var(--colorNeutralLight);
-    background: color(var(--colorNeutralLight) a(0.3));
+  &--big {
+    font-size: rem(16);
+    line-height: rem(19);
+    max-width: rem(186);
+    min-width: rem(186);
+    height: rem(44);
   }
-}
-
-.big {
-  font-size: 1.5rem;
-  padding: 0 2rem;
-  line-height: 3rem;
 }
