--- a/src/assets/styles/abstract/Colors.scss
+++ b/src/assets/styles/abstract/Colors.scss
@@ -6,4 +6,10 @@
   --gray-medium: #a5a7af;
   --white: white;
   --black: #373744;
+  --ars: #7908ff;
+  --btc: #feb402;
+  --eth: #333333;
+  --usdc: #2776ca;
+  --dai: #fd024f;
+  --ltc: #b9b9b9;
 }
