--- a/src/components/Wallets/index.scss
+++ b/src/components/Wallets/index.scss
@@ -1,4 +1,6 @@
 @import '../../assets/styles/abstract/Functions.scss';
+@import '../../assets/styles/abstract/Breakpoints.scss';
+@import '../../assets/styles/abstract/Mixins.scss';
 
 .wallets {
   padding-right: rem(24);
@@ -21,13 +23,26 @@
 
   &-row {
     background-color: var(--white);
-    padding: rem(14) rem(24) rem(14) rem(36);
+    padding: rem(14) rem(24) rem(14) rem(24);
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
     border-radius: rem(6);
     margin-bottom: rem(8);
+    flex-wrap: wrap;
+
+    @include breakpoint(sm) {
+      flex-wrap: nowrap;
+    }
+
+    @include breakpoint(md) {
+      padding: rem(14) rem(24) rem(14) rem(36);
+    }
 
     &_item {
-      flex: 1;
+      flex: auto;
+
+      @include breakpoint(sm) {
+        flex: 1;
+      }
     }
 
     .wallet-balance {
@@ -72,8 +87,12 @@
 }
 
 .wallet-id {
-  max-width: rem(40);
+  max-width: rem(25);
   color: var(--gray-medium);
+
+  @include breakpoint(md) {
+    max-width: rem(40);
+  }
 }
 
 .wallet-currency {
