--- a/src/components/Rates/index.scss
+++ b/src/components/Rates/index.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.rateCard {
+.rate-card {
   padding: rem(16) rem(24);
   background-color: var(--white);
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.06);
@@ -36,4 +36,25 @@
   margin-right: rem(32);
   min-width: rem(250);
   min-height: rem(132);
+
+  &_amount {
+    font-weight: var(--f-medium);
+    font-size: rem(24);
+    line-height: rem(28);
+  }
+
+  &_ticker {
+    margin-bottom: rem(13);
+
+    span {
+      font-size: rem(16);
+      line-height: rem(19);
+    }
+  }
+
+  &_variation {
+    font-size: rem(12);
+    line-height: rem(14);
+    color: var(--gray-medium);
+  }
 }
