--- a/src/assets/styles/layout/Flexbox.scss
+++ b/src/assets/styles/layout/Flexbox.scss
@@ -100,5 +100,13 @@
     .align-start-#{$name} {
       align-items: flex-start;
     }
+
+    .justify-start-#{$name} {
+      justify-content: flex-start;
+    }
+
+    .justify-between-#{$name} {
+      justify-content: space-between;
+    }
   }
 }
