--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,4 +1,6 @@
 @import '../../assets/styles/abstract/Functions.scss';
+@import '../../assets/styles/abstract/Breakpoints.scss';
+@import '../../assets/styles/abstract/Mixins.scss';
 
 .btn {
   display: flex;
@@ -29,9 +31,14 @@
   &--big {
     font-size: rem(16);
     line-height: rem(19);
-    max-width: rem(186);
-    min-width: rem(186);
+    max-width: rem(160);
+    min-width: rem(160);
     height: rem(44);
+
+    @include breakpoint(sm) {
+      max-width: rem(186);
+      min-width: rem(186);
+    }
   }
 
   &--small {
