--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -112,7 +112,7 @@
         opacity: 0;
       }
 
-      &:last-of-type {
+      &:nth-child(3) {
         transform: translate3d(0px, -6px, 0px) scale3d(1, 1, 1) rotateX(0deg)
           rotateY(0deg) rotateZ(-45deg) skew(0deg, 0deg);
       }
