--- a/src/components/Wallets/index.scss
+++ b/src/components/Wallets/index.scss
@@ -23,7 +23,7 @@
 
   &-row {
     background-color: var(--white);
-    padding: rem(14) rem(24) rem(14) rem(24);
+    padding: rem(14) rem(14) rem(14) rem(14);
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
     border-radius: rem(6);
     margin-bottom: rem(8);
@@ -31,6 +31,7 @@
 
     @include breakpoint(sm) {
       flex-wrap: nowrap;
+      padding: rem(14) rem(24) rem(14) rem(24);
     }
 
     @include breakpoint(md) {
@@ -39,9 +40,23 @@
 
     &_item {
       flex: auto;
+      margin: rem(12) 0;
 
       @include breakpoint(sm) {
         flex: 1;
+        margin: 0;
+      }
+
+      &:before {
+        content: attr(data-title);
+        font-size: rem(14);
+        color: var(--gray-medium);
+        display: block;
+        font-weight: var(--f-bold);
+
+        @include breakpoint(sm) {
+          display: none;
+        }
       }
     }
 
@@ -50,12 +65,21 @@
     }
 
     .wallet-equivalent {
-      text-align: right;
-      padding-right: 8%;
+      text-align: left;
+      padding-right: 0;
+
+      @include breakpoint(sm) {
+        text-align: right;
+        padding-right: 8%;
+      }
     }
 
     .wallet-percentage {
-      text-align: center;
+      text-align: left;
+
+      @include breakpoint(sm) {
+        text-align: center;
+      }
     }
   }
 }
@@ -64,7 +88,7 @@
   min-width: rem(45);
   min-height: rem(45);
   border-radius: 100%;
-  margin-right: rem(16);
+  margin-right: rem(8);
 
   &--ars {
     background-color: var(--ars);
@@ -90,27 +114,55 @@
   max-width: rem(25);
   color: var(--gray-medium);
 
-  @include breakpoint(md) {
+  @include breakpoint(sm) {
     max-width: rem(40);
   }
 }
 
 .wallet-currency {
-  max-width: 25%;
+  width: 100%;
+
+  @include breakpoint(sm) {
+    width: 25%;
+  }
 }
 
 .wallet-balance {
-  max-width: 16%;
+  width: 100%;
+  @include breakpoint(sm) {
+    width: 16%;
+  }
 }
 
 .wallet-equivalent {
-  max-width: 16%;
+  width: 100%;
+  @include breakpoint(sm) {
+    width: 16%;
+  }
 }
 
 .wallet-percentage {
-  max-width: 16%;
+  width: 100%;
+
+  @include breakpoint(sm) {
+    width: 16%;
+  }
 }
 
 .wallet-action {
-  max-width: rem(146);
+  width: 100%;
+  margin-top: rem(25);
+
+  @include breakpoint(sm) {
+    width: rem(146);
+    margin-top: 0;
+  }
+
+  .btn--small {
+    max-width: 100%;
+
+    @include breakpoint(sm) {
+      max-width: rem(146);
+    }
+  }
 }
