--- a/src/assets/styles/base/General.scss
+++ b/src/assets/styles/base/General.scss
@@ -12,6 +12,10 @@ html {
 body {
   min-height: 100vh;
   background-color: var(--background-color);
+
+  &.menu-open {
+    overflow: hidden;
+  }
 }
 
 img {
